--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,11 @@
 	<dependencies>
 	
 	<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-mail</artifactId>
+</dependency>
+	
+	<dependency>
     <groupId>io.springfox</groupId>
     <artifactId>springfox-swagger2</artifactId>
     <version>2.6.1</version>
@@ -35,7 +40,7 @@
 <dependency>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-mail</artifactId>
-    <version>2.7.1</version>
+   
 </dependency>
 
 			<dependency>
