--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,23 @@
 
+# configure server port 
+server.port=9090
+
+#Configure dada base 
+spring.datasource.url=jdbc:mysql://localhost:3306/user_management_Application
+spring.datasource.username=root
+spring.datasource.password=root@123
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+spring.jpa.hibernate.ddl-auto=update
+
+
+# Spring boot SMTP Mail Configure 
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=<Login User to SMTP server>
+spring.mail.password=<Login password to SMTP server>
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
